Add AssertJ Swing testing for some UI components